# oven-pico

./: .gitignore  CMakeLists.txt  README.md  ac.c  ac.h  ac.pio  base.h  mainq.h  nmtc.c  nmtc.h  nmtc.pio  oven.c  tmp101.c  tmp101.h  util.c  util.h
other/: log.c  log.h  qtest0.c  trash.c
trash/: ac.c  ac.pio  mainq.c  mainq.h  mytm.c  mytm.h  qtest.c  trash.c
